feat: Add more unit, service layer and web tests [DHIS2-15279]