@@ -36,8 +36,6 @@ import java.util.Map;
 import java.util.Optional;
 import java.util.Set;
 
-import lombok.RequiredArgsConstructor;
-
 import org.apache.commons.collections4.CollectionUtils;
 import org.apache.commons.collections4.SetValuedMap;
 import org.hisp.dhis.common.OpenApi;
@@ -69,6 +67,8 @@ import org.springframework.web.bind.annotation.ResponseBody;
 import org.springframework.web.bind.annotation.ResponseStatus;
 
 import com.google.common.collect.Lists;
+
+import lombok.RequiredArgsConstructor;
 
 /**
  * @author Morten Olav Hansen <mortenoh@gmail.com>
@@ -145,7 +145,7 @@ public class ProgramController
         ConflictException
     {
         String newUid = copyService.copyProgramFromUid( uid, copyOptions );
-        return created( String.format( "Program created: '%s'", newUid ) )
+        return created( ("Program created: '%s'".formatted( newUid )) )
             .setLocation( "/programs/" + newUid );
     }
 
